--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Jeff's Portfolio</title>
 
     <!-- my styles  -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/normalize.css">
 
     <!-- W3 Schools -->
@@ -626,6 +626,6 @@
     </footer>
     
     <!-- javascript -->
-    <script src="js/portfolio.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
