--- a/receiptx.html
+++ b/receiptx.html
@@ -6,7 +6,7 @@
     <title>ReceiptX</title>
 
     <!-- my styles  -->
-    <link rel="stylesheet" href="css/projects.css">
+    <link rel="stylesheet" href="css/receiptx.css">
     <link rel="stylesheet" href="css/normalize.css">
     
     <!-- W3 Schools -->
@@ -222,6 +222,6 @@
     </button>
 
     <!-- javascript -->
-    <script src="js/projects.js"></script>
+    <script src="js/receiptx.js"></script>
 </body>
 </html>
