--- a/hammer.html
+++ b/hammer.html
@@ -6,7 +6,7 @@
     <title>African Rhino Hammer</title>
 
     <!-- my styles  -->
-    <link rel="stylesheet" href="css/projects.css">
+    <link rel="stylesheet" href="css/hammer.css">
     <link rel="stylesheet" href="css/normalize.css">
     
     <!-- W3 Schools -->
@@ -186,6 +186,6 @@
     </button>
 
     <!-- javascript -->
-    <script src="js/projects.js"></script>
+    <script src="js/hammer.js"></script>
 </body>
 </html>
