adding receiptx content

--- a/receiptx.html
+++ b/receiptx.html
@@ -185,6 +185,8 @@
             <!-- PROTOTYPE  -->
             <div class="prototype">
                 <p>VIDEO GOES HERE</p>
+                <iframe src="https://www.youtube.com/embed/tbtOKumajJY" frameborder="0" allow="accelerometer; 
+                autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <h2>Prototype</h2>
 
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
