--- a/receiptx.html
+++ b/receiptx.html
@@ -6,7 +6,7 @@
     <title>ReceiptX</title>
 
     <!-- my styles  -->
-    <link rel="stylesheet" href="css/project.css">
+    <link rel="stylesheet" href="css/receipt.css">
     <link rel="stylesheet" href="css/normalize.css">
     
     <!-- W3 Schools -->
@@ -224,6 +224,6 @@
     </button>
 
     <!-- javascript -->
-    <script src="js/project.js"></script>
+    <script src="js/receipt.js"></script>
 </body>
 </html>
