working with modal image

--- a/receiptx.html
+++ b/receiptx.html
@@ -63,17 +63,35 @@
     <div class="container">
         <div class="description">
             <div class="col">
-                <img src="images/ux/receiptx/receiptx.PNG" alt="ReceiptX">
+                <!-- Trigger the Modal -->
+                <img id="myImg" src="images/ux/receiptx/receiptx.PNG" alt="ReceiptX">
+
+                <!-- The Modal -->
+                <div id="myModal" class="modal">
+
+                    <!-- The Close Button -->
+                    <span class="close">&times;</span>
+
+                    <!-- Modal Content (The Image) -->
+                    <img class="modal-content" id="img01">
+
+                    <!-- Modal Caption (Image Text) -->
+                    <div id="caption"></div>
+                </div>
+
+                <h5>Click on the image to get a better view!</h5>
             </div>
             
             <div class="col">
                 <h2>Overview</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                    Condimentum mattis pellentesque id nibh. Eget est lorem ipsum dolor sit amet. Aliquam id diam maecenas ultricies mi. Felis donec et 
-                    odio pellentesque diam volutpat. Turpis nunc eget lorem dolor sed viverra ipsum nunc. Cursus metus aliquam eleifend mi in nulla posuere.
-                    In metus vulputate eu scelerisque felis imperdiet. Sit amet consectetur adipiscing elit ut aliquam purus sit. Semper quis lectus nulla
-                    at volutpat diam. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Laoreet suspendisse interdum
-                    consectetur libero id. Vitae et leo duis ut diam quam nulla porttitor massa.</p>
+                <p>After making a purchase&#44; some people lose their receipts&#44; making it hard for them to manage their finances. 
+                    Today&#44; most people use their smart phone in their everyday life. The problem we are trying to solve is to find a way 
+                    for people between the ages 19-40 to manage their receipts and finances by creating an android application called 
+                    &#34;ReceiptX.&#34; Users will be able to take images and manually enter receipt information to the app. Just like how people 
+                    check their banking information on their phone&#44; they will be able to do the same with the receipts they have collected 
+                        on the app. We found that most people do not keep of their receipts because they lose it. With ReceiptX&#44; we hope 
+                    to turn things around and make receipt management easier for people.
+                </p>
             </div>
         </div>
     </div>
