--- a/receiptx.html
+++ b/receiptx.html
@@ -92,6 +92,12 @@
                         on the app. We found that most people do not keep of their receipts because they lose it. With ReceiptX&#44; we hope 
                     to turn things around and make receipt management easier for people.
                 </p>
+
+                <a href="https://github.com/xjeffey/receiptx" target="_blank">
+                    <div class="view-process">
+                        <p>VIEW CODE</p>
+                    </div>
+                </a>
             </div>
         </div>
     </div>
@@ -274,7 +280,6 @@
     
             <!-- PROTOTYPE  -->
             <div class="prototype">
-                <p>VIDEO GOES HERE</p>
                 <iframe src="https://www.youtube.com/embed/tbtOKumajJY" frameborder="0" allow="accelerometer; 
                 autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <h2>Prototype</h2>
