--- a/hammer.html
+++ b/hammer.html
@@ -177,15 +177,15 @@
             <!-- CONCEPT  -->
             <div class="concept">
                 <img src="images/ux/hammer/rhino1.png" alt="Rhino Hammer Concept">
-                <img src="images/ux/hammer/rhino2.png" alt="Rhino Hammer Concept">
-                <img src="images/ux/hammer/rhino3.png" alt="Rhino Hammer Concept">
-                <img src="images/ux/hammer/rhino4.png" alt="Rhino Hammer Concept">
-                <img src="images/ux/hammer/rhino5.png" alt="Rhino Hammer Concept">
-                <img src="images/ux/hammer/rhino6.png" alt="Rhino Hammer Concept">
-                <img src="images/ux/hammer/rhino7.png" alt="Rhino Hammer Concept">
-                <img src="images/ux/hammer/rhino8.png" alt="Rhino Hammer Concept">
-                <img src="images/ux/hammer/rhino9.png" alt="Rhino Hammer Concept">
-                <img src="images/ux/hammer/rhino10.png" alt="Rhino Hammer Concept">
+                <img src="images/ux/hammer/rhino2.PNG" alt="Rhino Hammer Concept">
+                <img src="images/ux/hammer/rhino3.PNG" alt="Rhino Hammer Concept">
+                <img src="images/ux/hammer/rhino4.PNG" alt="Rhino Hammer Concept">
+                <img src="images/ux/hammer/rhino5.PNG" alt="Rhino Hammer Concept">
+                <img src="images/ux/hammer/rhino6.PNG" alt="Rhino Hammer Concept">
+                <img src="images/ux/hammer/rhino7.PNG" alt="Rhino Hammer Concept">
+                <img src="images/ux/hammer/rhino8.PNG" alt="Rhino Hammer Concept">
+                <img src="images/ux/hammer/rhino9.PNG" alt="Rhino Hammer Concept">
+                <img src="images/ux/hammer/rhino10.PNG" alt="Rhino Hammer Concept">
                 
                 <h2>Concept</h2>
 
