working on responsiveness

--- a/index.html
+++ b/index.html
@@ -228,7 +228,9 @@
                 
                 <div class="proj-desc">
                     <div class="col">
-                        <img src="images/cs/earthquake.jpg" alt="Earthquake Data Explorer">
+                        <a href="https://iu.mediaspace.kaltura.com/media/EarthquakeDataDemo/1_hap9k414" target="_blank">
+                            <img src="images/cs/earthquake.jpg" alt="Earthquake Data Explorer">
+                        </a>
                     </div>
 
                     <div class="col">
@@ -241,11 +243,14 @@
                               at volutpat diam. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Laoreet suspendisse interdum
                                consectetur libero id. Vitae et leo duis ut diam quam nulla porttitor massa.</p>
 
-                        <a href="https://github.com/xjeffey/earthquake-data-explorer" target="_blank">
+                        <p class="earthquake-info">If you would like to see our code, click <a href="https://github.com/xjeffey/earthquake-data-explorer" target="_blank">HERE</a>!</p>
+
+                        <a href="https://iu.mediaspace.kaltura.com/media/EarthquakeDataDemo/1_hap9k414" target="_blank">
                             <div class="view-process">
-                                <p>VIEW CODE</p>
+                                <p>VIEW DEMO</p>
                             </div>
                         </a>
+
                     </div>
                 </div>
             </div>
