--- a/index.html
+++ b/index.html
@@ -76,14 +76,13 @@
             
             <div class="proj-header">
                 <h1>Projects</h1>
-                <p>Click on the images to view the project!</p>
+                <p>Here, you will find some of the things I have worked on!</p>
             </div>
             
             <!-- ux projects -->
             <div class="ux">
 
                 <h2>User Experience</h2>
-                <p>The process for these projects will be availiable soon!</p>
 
                 <div class="proj-desc">
                     <div class="col">
