adding home on logo

--- a/hammer.html
+++ b/hammer.html
@@ -42,7 +42,9 @@
     <!-- HEADER  -->
 
     <div id="header">
-        <img src="images/general/logo.png" alt="logo" class="logo">
+        <a href="index.html">
+            <img src="images/general/logo.png" alt="logo" class="logo">
+        </a>
 
         <!-- navigation bar -->
         <div class="navbar" id="hamburgerNav">
