--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
     </div>
 
     <div id="header">
-        <img src="images/general/logo.png" alt="logo" class="logo">
-
+        <a href="index.html">
+            <img src="images/general/logo.png" alt="logo" class="logo">
+        </a>
+        
         <!-- navigation bar -->
         <div class="navbar" id="hamburgerNav">
             <a href="#header">Home</a>
