--- a/receiptx.html
+++ b/receiptx.html
@@ -121,7 +121,11 @@
             <h1>The Process</h1>
             <!-- PROBLEM  -->
             <div class="problem">
-                <img src="images/general/receipt.jpg" alt="receipt">
+                <figure>
+                    <img src="images/general/receipt.jpg" alt="receipt">
+                    <figcaption>Photo by Michael Walter on Unsplash</figcaption>
+                </figure>
+                
                 
                 <h2>Problem</h2>
 
