--- a/hammer.html
+++ b/hammer.html
@@ -85,12 +85,11 @@
             
             <div class="col">
                 <h2>Overview</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                    Condimentum mattis pellentesque id nibh. Eget est lorem ipsum dolor sit amet. Aliquam id diam maecenas ultricies mi. Felis donec et 
-                    odio pellentesque diam volutpat. Turpis nunc eget lorem dolor sed viverra ipsum nunc. Cursus metus aliquam eleifend mi in nulla posuere.
-                    In metus vulputate eu scelerisque felis imperdiet. Sit amet consectetur adipiscing elit ut aliquam purus sit. Semper quis lectus nulla
-                    at volutpat diam. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Laoreet suspendisse interdum
-                    consectetur libero id. Vitae et leo duis ut diam quam nulla porttitor massa.</p>
+                <p>The weapon is an ancient "Rhino-Hammer" from W'Kabi's tribe that has been modified to allow the head to release and 
+                    extend the length of the weapon. The weapon can also gather and charge kinetic enrgy by swinging it around and then 
+                    transferring the stored potential energy is three ways: "Rhino Smash" - direct hit release, "Rhino Blash" - concentrated 
+                    laser-shot release of energy through the horn of the hammer, and "Rhino Quake" - slamming the rhino horn into the ground 
+                    releases energy into the surrounding environment.</p>
             </div>
         </div>
 
