--- a/index.html
+++ b/index.html
@@ -135,7 +135,9 @@
 
                 <div class="myProjects">
                     <div class="project">
-                        <a href="https://www.youtube.com/watch?v=wDGly9tSozA" target="_blank"><img src="images/multimedia/league-montage.PNG" alt="League of Legends Montage" class="proj-img"></a>
+                        <a href="https://www.youtube.com/watch?v=wDGly9tSozA" target="_blank">
+                            <img src="images/multimedia/league-montage.PNG" alt="League of Legends Montage" class="proj-img">
+                        </a>
 
                         <h3>League of Legends Montage</h3>
                         <p>Academic Project (Spring 2020)</p>
