--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
 
         <h1>Jeffrey Tran</h1>
-        <h2>Inspiring UX Designer</h2>
+        <h2>Inspiring UX Designer &amp; Developer</h2>
     </div>
     
     <!-- stock image here about ux -->
