changing image sizes

--- a/hammer.html
+++ b/hammer.html
@@ -65,7 +65,7 @@
         <div class="description">
             <div class="col">
                 <!-- Trigger the Modal -->
-                <img id="myImg" src="images/ux/hammer/hammer.jpg" alt="African Rhino Hammer">
+                <img id="myImg" src="images/ux/hammer/hammer.png" alt="African Rhino Hammer">
 
                 <!-- The Modal -->
                 <div id="myModal" class="modal">
