--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <!-- HAMMER  -->
                     <a href="hammer.html">
                         <div class="project">
-                            <img src="images/ux/hammer/hammer.jpg" alt="African Rhino Hammer" class="proj-img">
+                            <img src="images/ux/hammer/hammer.png" alt="African Rhino Hammer" class="proj-img">
                             
                             <div class="proj-info">
                                 <h3>African Rhino Hammer</h3>
@@ -135,7 +135,7 @@
                     <!-- EARTHQUAKE DATA EXPLORER  -->
                     <a href="https://iu.mediaspace.kaltura.com/media/EarthquakeDataDemo/1_hap9k414" target="_blank">
                         <div class="project">
-                            <img src="images/cs/earthquake.jpg" alt="Earthquake Data Explorer"  class="proj-img">
+                            <img src="images/cs/earthquake.png" alt="Earthquake Data Explorer"  class="proj-img">
                             
                             <div class="proj-info">
                                 <h3>Earthquake Data Explorer</h3>
