--- a/index.html
+++ b/index.html
@@ -454,10 +454,18 @@
 
                 <div class="skills">
                     <div class="progress">
-                        <div class="percent" style="width: 50%;">50%</div>
+                        <div class="percent" style="width: 55%;">55%</div>
                     </div>
 
                     <h2>Java</h2>
+                </div>
+
+                <div class="skills">
+                    <div class="progress">
+                        <div class="percent" style="width: 50%;">50%</div>
+                    </div>
+
+                    <h2>Python</h2>
                 </div>
 
                 <div class="skills">
