fixing img sizes

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             <div class="process-desc">
                 <div class="col">
                     <figure>
-                        <img src="images/general/problem.jpg" alt="Problem">
+                        <img src="images/general/problem.png" alt="Problem">
                         <figcaption>Photo by Hans-Peter Gauster on Unsplash</figcaption>
                     </figure>
                 </div>
@@ -216,7 +216,7 @@
             <div class="process-desc">
                 <div class="col">
                     <figure>
-                        <img src="images/general/research.jpg" alt="Research">
+                        <img src="images/general/research.png" alt="Research">
                         <figcaption>Photo by Dan Dimmock on Unsplash</figcaption>
                     </figure>
                 </div>
@@ -236,7 +236,7 @@
             <div class="process-desc">
                 <div class="col">
                     <figure>
-                        <img src="images/general/insight.jpg" alt="Insight">
+                        <img src="images/general/insight.png" alt="Insight">
                         <figcaption>Photo by You X Ventures on Unsplash</figcaption>
                     </figure>
                 </div>
@@ -256,7 +256,7 @@
             <div class="process-desc">
                 <div class="col">
                     <figure>
-                        <img src="images/general/concept.jpg" alt="Concept">
+                        <img src="images/general/concept.png" alt="Concept">
                         <figcaption>Photo by Austin Distel on Unsplash</figcaption>
                     </figure>
                 </div>
@@ -276,7 +276,7 @@
             <div class="process-desc">
                 <div class="col">
                     <figure>
-                        <img src="images/general/iteration.jpg" alt="Prototype">
+                        <img src="images/general/iteration.png" alt="Prototype">
                         <figcaption>Photo by Kelly Sikkema on Unsplash</figcaption>
                     </figure>
                 </div>
@@ -296,7 +296,7 @@
             <div class="process-desc">
                 <div class="col">
                     <figure>
-                        <img src="images/general/prototype.jpg" alt="Prototype">
+                        <img src="images/general/prototype.png" alt="Prototype">
                         <figcaption>Photo by Alvaro Reyes on Unsplash</figcaption>
                     </figure>
                 </div>
@@ -396,7 +396,7 @@
     <div class="container">
         <div id="about">
             <h1>My Story</h1>
-            <img src="images/general/profile-img.JPEG" alt="Self Image">
+            <img src="images/general/profile-img.png" alt="Self Image">
     
             <div class="about-info">
                 <div class="col">
