--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             <a href="#process">Process</a>
             <a href="#resume">Resume</a>
             <a href="#about">About</a>
+            <a href="#skills">Skills</a>
             <a href="#contact">Contact</a>
         </div>
     </div>
@@ -58,6 +59,7 @@
             <a href="#process">Process</a>
             <a href="#resume">Resume</a>
             <a href="#about">About</a>
+            <a href="#skills">Skills</a>
             <a href="#contact">Contact</a>
             <a class="icon"><i class="fa fa-bars menu-icon fa-2x"></i></a>
         </div>
@@ -410,10 +412,15 @@
                             In metus vulputate eu scelerisque felis imperdiet.</p>
                 </div>
             </div>
+        </div>
+    </div>
 
-             <!-- skills  -->
-             <div class="skillsBox">
-                <h1>Look at what I can do!</h1>
+    <!-- SKILLS  -->
+    <div class="container">
+        <div id="skills">
+            <!-- skills  -->
+            <div class="skillsBox">
+                <h1>Skills</h1>
 
                 <div class="skills">
                     <div class="progress">
@@ -471,7 +478,6 @@
                     <h2>PHP</h2>
                 </div>
             </div>
-            
         </div>
     </div>
 
