--- a/index.html
+++ b/index.html
@@ -342,10 +342,10 @@
                 <li>
                     <div class="content-tl">
                         <h3>Undergraduate Instructor for Information Infrastructure</h3>
-                        <p>Held conversations about course material with students&#44;
-                            ensuring they could apply class material over coursework and labs&#44; for 2 office hours a week</p>
-                       <p>Lead lab sessions for 25 students weekly to answer student questions so students can be fully prepared for homework&#44;
-                            quizzes&#44; and exams</p>
+                        <p>Held conversations about course material with students, ensuring they could apply class material
+                             over coursework and labs, for 3 office hours a week</p>
+
+                       <p>Lead lab sessions for 30 students weekly to help students be fully prepared for homework, quizzes, and exams</p>
                         
                         <div class="time-tl">
                             <h4>August 2019</h4>
@@ -359,8 +359,8 @@
                         
                         <p>Held conversations about course material with students&#44;
                              ensuring they could apply class material over coursework and labs, for 4 office hours a week</p>
-                        <p>Conducted lab sessions for 90 students weekly to answer student questions so students can be fully prepared for homework&#44;
-                             quizzes&#44; and exams</p>
+                        <p>Assisted lab sessions with peers for 60 students weekly to answer questions so they can be fully prepared for
+                             homework, quizzes, and exams </p>
 
                         <div class="time-tl">
                             <h4>August 2018</h4>
