--- a/receiptx.html
+++ b/receiptx.html
@@ -84,7 +84,7 @@
             
             <div class="col">
                 <h2>Overview</h2>
-                <p>After making a purchase&#44; some people lose their receipts&#44; making it hard for them to manage their finances. 
+                <p class="overview">After making a purchase&#44; some people lose their receipts&#44; making it hard for them to manage their finances. 
                     Today&#44; most people use their smart phone in their everyday life. The problem we are trying to solve is to find a way 
                     for people between the ages 19-40 to manage their receipts and finances by creating an android application called 
                     &#34;ReceiptX.&#34; Users will be able to take images and manually enter receipt information to the app. Just like how people 
