--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
     <div class="container">
         <div id="about">
             <h1>My Story</h1>
-            <img src="images/general/profile-img.png" alt="Self Image">
+            <img src="images/general/jefftran_headshot.JPG" alt="Self Image">
     
             <div class="about-info">
                 <div class="col">
