--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 </a>
                 
                 <!-- EARTHQUAKE DATA EXPLORER  -->
-                <a href="https://iu.mediaspace.kaltura.com/media/EarthquakeDataDemo/1_hap9k414" target="_blank">
+                <!-- <a href="https://iu.mediaspace.kaltura.com/media/EarthquakeDataDemo/1_hap9k414" target="_blank">
                     <div class="project">
                         <p>Computer Science</p>
                         <img src="images/cs/earthquake.png" alt="Earthquake Data Explorer"  class="proj-img">
@@ -121,7 +121,7 @@
                             <p>Academic Project (Spring 2019)</p>
                         </div>
                     </div>
-                </a>
+                </a> -->
 
             </div>
         </div>
