--- a/receiptx.html
+++ b/receiptx.html
@@ -58,7 +58,7 @@
         </div>
 
         <h1>ReceiptX</h1>
-        <h2>Take control of your receipts and spending today!</h2>
+        <h2>Role: Team Lead and Android Developer</h2>
     </div>
 
     <!-- PROJECT DESCRIPTION  -->
@@ -93,23 +93,12 @@
                     to turn things around and make receipt management easier for people.
                 </p>
 
-                <a href="https://github.com/xjeffey/receiptx" target="_blank">
+                <!-- <a href="https://github.com/xjeffey/receiptx" target="_blank">
                     <div class="view-process">
                         <p>VIEW CODE</p>
                     </div>
-                </a>
+                </a> -->
             </div>
-        </div>
-    </div>
-
-    <!-- DEMO -->
-    <div class="container">
-        <div class="demo">
-            <h1>Demo</h1>
-
-            <iframe src="https://www.youtube.com/embed/oj-bELa4va4"
-            frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
         </div>
     </div>
 
@@ -295,6 +284,17 @@
                     at volutpat diam. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Laoreet suspendisse interdum
                     consectetur libero id. Vitae et leo duis ut diam quam nulla porttitor massa.</p>
             </div>
+        </div>
+    </div>
+
+    <!-- DEMO -->
+    <div class="container">
+        <div class="demo">
+            <h1>Demo</h1>
+
+            <iframe src="https://www.youtube.com/embed/oj-bELa4va4"
+            frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
         </div>
     </div>
 
