--- a/receiptx.html
+++ b/receiptx.html
@@ -61,7 +61,7 @@
         <h2>Role: Team Lead and Android Developer</h2>
     </div>
 
-    PROJECT DESCRIPTION 
+    <!-- PROJECT DESCRIPTION  -->
     <div class="container">
         <div class="description">
             <div class="col">
