--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
                 <a href="hammer.html">
                     <div class="project">
                         <p>User Experience</p>
-                        <img src="images/ux/hammer/hammer.png" alt="African Rhino Hammer" class="proj-img">
+                        <img src="images/ux/hammer/hammer.png" alt="Rhino Hammer" class="proj-img">
                         
                         <div class="proj-info">
-                            <h3>African Rhino Hammer</h3>
+                            <h3>Rhino Hammer</h3>
                             <p>Academic Project (Spring 2018)</p> 
                         </div>
                     </div>
