--- a/hammer.html
+++ b/hammer.html
@@ -56,9 +56,137 @@
             <a href="index.html#contact">Contact</a>
             <a class="icon"><i class="fa fa-bars menu-icon fa-2x"></i></a>
         </div>
-
-        <h1>African Rhino Hammer</h1>
     </div>
+
+     <!-- PROJECT IMAGE  -->
+     <div class="container">
+        <!-- Trigger the Modal -->
+        <img id="myImg" src="images/ux/hammer/hammer.png" alt="Rhino Hammer">
+
+        <!-- The Modal -->
+        <div id="myModal" class="modal">
+
+            <!-- The Close Button -->
+            <span class="close">&times;</span>
+
+            <!-- Modal Content (The Image) -->
+            <img class="modal-content" id="img01">
+
+            <!-- Modal Caption (Image Text) -->
+            <div id="caption"></div>
+        </div>
+    </div>
+
+    <!-- OVERVIEW -->
+    <div class="container">
+        <h1>Rhino Hammer</h1>
+
+        <!-- overview  -->
+        <div class="col">
+            <h2>Overview</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                Condimentum mattis pellentesque id nibh. Eget est lorem ipsum dolor sit amet. Aliquam id diam maecenas ultricies mi. Felis donec et 
+                odio pellentesque diam volutpat. Turpis nunc eget lorem dolor sed viverra ipsum nunc. Cursus metus aliquam eleifend mi in nulla posuere.
+                In metus vulputate eu scelerisque felis imperdiet. Sit amet consectetur adipiscing elit ut aliquam purus sit. Semper quis lectus nulla
+                at volutpat diam. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Laoreet suspendisse interdum
+                consectetur libero id. Vitae et leo duis ut diam quam nulla porttitor massa.</p>
+        </div>
+
+        <!-- role  -->
+        <div class="col">
+            <h2>Role</h2>
+            <p>User Research, Prototyping & Testing, Pitching, Product Stategy, Information Architecture, Android Development</p>
+        </div>
+    </div>
+
+    <!-- BACKGROUND  -->
+    <div class="container">
+        <!-- background  -->
+        <div class="background">
+            <h1>Background</h1>
+            <p>What is ReceiptX about</p>
+        </div>
+        
+        <!-- accomplishment  -->
+        <div class="achievements">
+            <h2>Main Accomplishment</h2>
+            <p>list some here</p>
+        </div>
+    </div>
+
+    <!-- RESEARCHING  -->
+    <div class="container">
+        <div class="resarch">
+            <h1>Understanding the problem</h1>
+            <p>What did I do?</p>
+            <p>images of stuff I did</p>
+            <p>What did I learn from it?</p>
+        </div>
+    </div>
+
+    <!-- PERSONAS -->
+    <div class="container">
+        <div class="persona">
+            <h1>User personas</h1>
+            <p>how did I create the project with users in mind?</p>
+            <p>IMAGES HERE</p>
+        </div>
+    </div>
+
+    <!-- PROBLEM STATEMENT -->
+    <div class="container">
+        <div class="statement">
+            <h1>Defining the problem statement</h1>
+            <p>What is the issue I found during my reseach?</p>
+        </div>
+    </div>
+
+    <!-- PRODUCT VISION -->
+    <div class="container">
+        <div class="vision">
+            <h1>The product vision</h1>
+            <p>what does our project highlight?</p>
+            <p>show demo here</p>
+        </div>
+    </div>
+
+    <!-- PRODUCT MVP -->
+    <div class="container">
+        <div class="mvp">
+            <h1>Defining the MVP</h1>
+            <p>how did we come up with how project should look like</p>
+            <p>IMAGES of sketches/brainstorming</p>
+        </div>
+    </div>
+
+    <!-- DESIGNS  -->
+    <div class="container">
+        <div class="designs">
+            <h1>Designs</h1>
+            <p>what does our project look like - prototype</p>
+            <p>images and describe</p>
+        </div>
+    </div>
+
+    <!-- IMPLEMENTATION -->
+    <div class="container">
+        <div class="implementation">
+            <h1>Implementation</h1>
+            <p>How did we create this?</p>
+        </div>
+    </div>
+
+    <!-- RESULTS AND TAKEAWAYS -->
+    <div class="container">
+        <div class="results">
+            <h1>Results and Takeaways</h1>
+            <p>What happened at the end?</p>
+            <p>What did I learn</p>
+        </div>
+    </div>
+
+    <!-- -------------------------------------------------------------------------------------------- -->
+
 
     <!-- PROJECT DESCRIPTION  -->
     <div class="container">
