--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <!-- RECEIPTX  -->
                 <a href="receiptx.html">
                     <div class="project">
-                        <p>User Experience</p>
+                        <!-- <p>User Experience</p> -->
                         <img src="images/ux/receiptx/receiptx.PNG" alt="ReceiptX App" class="proj-img">
                         
                         <div class="proj-info">
@@ -100,7 +100,7 @@
                 <!-- HAMMER  -->
                 <a href="hammer.html">
                     <div class="project">
-                        <p>User Experience</p>
+                        <!-- <p>User Experience</p> -->
                         <img src="images/ux/hammer/hammer.png" alt="Rhino Hammer" class="proj-img">
                         
                         <div class="proj-info">
