--- a/receiptx.html
+++ b/receiptx.html
@@ -195,7 +195,7 @@
 
     <!-- DESIGNS  -->
     <div class="container">
-        <div class="designs">
+        <div class="design">
             <h1>Designs</h1>
             <p>what does our project look like - prototype, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                 Condimentum mattis pellentesque id nibh. Eget est lorem ipsum dolor sit amet. Aliquam id diam maecenas ultricies mi. Felis donec et 
@@ -221,7 +221,7 @@
 
     <!-- RESULTS AND TAKEAWAYS -->
     <div class="container">
-        <div class="results">
+        <div class="takeaway">
             <h1>Results and Takeaways</h1>
             <p>What happened at the end?, What did I learn, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                 Condimentum mattis pellentesque id nibh. Eget est lorem ipsum dolor sit amet. Aliquam id diam maecenas ultricies mi. Felis donec et 
