--- a/receiptx.html
+++ b/receiptx.html
@@ -79,52 +79,61 @@
 
     <!-- OVERVIEW -->
     <div class="container">
-        <h1>ReceiptX</h1>
+        <div class="overview">
+            <h1>ReceiptX</h1>
 
-        <!-- overview  -->
-        <div class="col">
-            <div class="overview">
-                <h2>Overview</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                    Condimentum mattis pellentesque id nibh. Eget est lorem ipsum dolor sit amet. Aliquam id diam maecenas ultricies mi. Felis donec et 
-                    odio pellentesque diam volutpat. Turpis nunc eget lorem dolor sed viverra ipsum nunc. Cursus metus aliquam eleifend mi in nulla posuere.
-                    In metus vulputate eu scelerisque felis imperdiet. Sit amet consectetur adipiscing elit ut aliquam purus sit. Semper quis lectus nulla
-                    at volutpat diam. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Laoreet suspendisse interdum
-                    consectetur libero id. Vitae et leo duis ut diam quam nulla porttitor massa.</p>
+            <!-- overview  -->
+            <div class="col">
+                <div class="summary">
+                    <h2>Overview</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                        Condimentum mattis pellentesque id nibh. Eget est lorem ipsum dolor sit amet. Aliquam id diam maecenas ultricies mi. Felis donec et 
+                        odio pellentesque diam volutpat. Turpis nunc eget lorem dolor sed viverra ipsum nunc. Cursus metus aliquam eleifend mi in nulla posuere.
+                        In metus vulputate eu scelerisque felis imperdiet. Sit amet consectetur adipiscing elit ut aliquam purus sit. Semper quis lectus nulla
+                        at volutpat diam. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Laoreet suspendisse interdum
+                        consectetur libero id. Vitae et leo duis ut diam quam nulla porttitor massa.</p>
+                </div>
             </div>
-        </div>
-
-        <!-- role  -->
-        <div class="col">
-            <div class="role">
-                <h2>Role</h2>
-                <p>User Research, Prototyping & Testing, Pitching, Product Stategy, Information Architecture, Android Development - ROLES I PLAYED IN</p>
+    
+            <!-- role  -->
+            <div class="col">
+                <div class="role">
+                    <h2>Role</h2>
+                    <p>User Research, Prototyping & Testing, Pitching, Product Stategy, Information Architecture, Android Development - ROLES I PLAYED IN</p>
+                </div>
             </div>
         </div>
     </div>
 
     <!-- BACKGROUND  -->
     <div class="container">
-        <!-- background  -->
         <div class="background">
-            <h1>Background</h1>
-            <p>What is ReceiptX about, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                Condimentum mattis pellentesque id nibh. Eget est lorem ipsum dolor sit amet. Aliquam id diam maecenas ultricies mi. Felis donec et 
-                odio pellentesque diam volutpat. Turpis nunc eget lorem dolor sed viverra ipsum nunc. Cursus metus aliquam eleifend mi in nulla posuere.
-                In metus vulputate eu scelerisque felis imperdiet. Sit amet consectetur adipiscing elit ut aliquam purus sit. Semper quis lectus nulla
-                at volutpat diam. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Laoreet suspendisse interdum
-                consectetur libero id. Vitae et leo duis ut diam quam nulla porttitor massa.</p>
-        </div>
-        
-        <!-- accomplishment  -->
-        <div class="achievements">
-            <h2>Main Accomplishment</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                Condimentum mattis pellentesque id nibh. Eget est lorem ipsum dolor sit amet. Aliquam id diam maecenas ultricies mi. Felis donec et 
-                odio pellentesque diam volutpat. Turpis nunc eget lorem dolor sed viverra ipsum nunc. Cursus metus aliquam eleifend mi in nulla posuere.
-                In metus vulputate eu scelerisque felis imperdiet. Sit amet consectetur adipiscing elit ut aliquam purus sit. Semper quis lectus nulla
-                at volutpat diam. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Laoreet suspendisse interdum
-                consectetur libero id. Vitae et leo duis ut diam quam nulla porttitor massa.</p>
+            <!-- background  -->
+            <div class="col">
+                <div class="background-info">
+                    <h1>Background</h1>
+                    <p>What is ReceiptX about, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                        Condimentum mattis pellentesque id nibh. Eget est lorem ipsum dolor sit amet. Aliquam id diam maecenas ultricies mi. Felis donec et 
+                        odio pellentesque diam volutpat. Turpis nunc eget lorem dolor sed viverra ipsum nunc. Cursus metus aliquam eleifend mi in nulla posuere.
+                        In metus vulputate eu scelerisque felis imperdiet. Sit amet consectetur adipiscing elit ut aliquam purus sit. Semper quis lectus nulla
+                        at volutpat diam. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Laoreet suspendisse interdum
+                        consectetur libero id. Vitae et leo duis ut diam quam nulla porttitor massa.</p>
+                </div>
+            </div>
+
+
+            <!-- accomplishment  -->
+            <div class="col">
+                <div class="achievements">
+                    <h1>Main Accomplishment</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                        Condimentum mattis pellentesque id nibh. Eget est lorem ipsum dolor sit amet. Aliquam id diam maecenas ultricies mi. Felis donec et 
+                        odio pellentesque diam volutpat. Turpis nunc eget lorem dolor sed viverra ipsum nunc. Cursus metus aliquam eleifend mi in nulla posuere.
+                        In metus vulputate eu scelerisque felis imperdiet. Sit amet consectetur adipiscing elit ut aliquam purus sit. Semper quis lectus nulla
+                        at volutpat diam. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Laoreet suspendisse interdum
+                        consectetur libero id. Vitae et leo duis ut diam quam nulla porttitor massa.</p>
+                </div>
+            </div>
         </div>
     </div>
 
