--- a/receiptx.html
+++ b/receiptx.html
@@ -147,6 +147,22 @@
                 at volutpat diam. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Laoreet suspendisse interdum
                 consectetur libero id. Vitae et leo duis ut diam quam nulla porttitor massa.</p>
         </div>
+
+        <!-- IMAGES  -->
+        <figure>
+            <img src="images/ux/receiptx/survery-q1.PNG" alt="Survey Question 1" style="width: 100%;">
+            <figcaption>Survey Question 1</figcaption>
+        </figure>
+
+        <figure>
+            <img src="images/ux/receiptx/survery-q2.PNG" alt="Survey Question 2" style="width: 100%;">
+            <figcaption>Survey Question 2</figcaption>
+        </figure>
+
+        <figure>
+            <img src="images/ux/receiptx/survery-q3.PNG" alt="Survey Question 3" style="width: 100%;">
+            <figcaption>Survey Question 3</figcaption>
+        </figure>
     </div>
 
     <!-- PERSONAS -->
@@ -178,7 +194,7 @@
     <!-- PRODUCT VISION -->
     <div class="container">
         <div class="vision">
-            <h1>The product vision</h1>
+            <h1>The product vision - SHOW VIDEO DEMO</h1>
             <p>what does our project highlight?, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                 Condimentum mattis pellentesque id nibh. Eget est lorem ipsum dolor sit amet. Aliquam id diam maecenas ultricies mi. Felis donec et 
                 odio pellentesque diam volutpat. Turpis nunc eget lorem dolor sed viverra ipsum nunc. Cursus metus aliquam eleifend mi in nulla posuere.
@@ -186,6 +202,9 @@
                 at volutpat diam. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Laoreet suspendisse interdum
                 consectetur libero id. Vitae et leo duis ut diam quam nulla porttitor massa.</p>
         </div>
+
+        <iframe src="https://www.youtube.com/embed/tbtOKumajJY" frameborder="0" allow="accelerometer; 
+            autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
     <!-- PRODUCT MVP -->
@@ -199,6 +218,42 @@
                 at volutpat diam. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Laoreet suspendisse interdum
                 consectetur libero id. Vitae et leo duis ut diam quam nulla porttitor massa.</p>
         </div>
+
+        <!-- IMAGES  -->
+        <figure>
+            <img src="images/ux/receiptx/paper-9.PNG" alt="Paper Prototype Home Screen" style="width: 100%;">
+            <figcaption>Home Screen</figcaption>
+        </figure>
+
+        <figure>
+            <img src="images/ux/receiptx/paper-10.PNG" alt="Paper Prototype Items" style="width: 100%;">
+            <figcaption>Items</figcaption>
+        </figure>
+
+        <figure>
+            <img src="images/ux/receiptx/paper-11.PNG" alt="Paper Prototype Image Capture" style="width: 100%;">
+            <figcaption>Image Capture</figcaption>
+        </figure>
+
+        <figure>
+            <img src="images/ux/receiptx/paper-12.PNG" alt="Paper Prototype Entry Submission" style="width: 100%;">
+            <figcaption>Entry Submission</figcaption>
+        </figure>
+
+        <figure>
+            <img src="images/ux/receiptx/paper-13.PNG" alt="Paper Prototype Profile" style="width: 100%;">
+            <figcaption>Profile</figcaption>
+        </figure>
+
+        <figure>
+            <img src="images/ux/receiptx/paper-14.PNG" alt="Paper Prototype Graphs" style="width: 100%;">
+            <figcaption>Graphs</figcaption>
+        </figure>
+
+        <figure>
+            <img src="images/ux/receiptx/paper-15.PNG" alt="Paper Prototype Hamburger Navigation" style="width: 100%;">
+            <figcaption>Hamburger Navigation</figcaption>
+        </figure>
     </div>
 
     <!-- DESIGNS  -->
@@ -212,6 +267,37 @@
                 at volutpat diam. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Laoreet suspendisse interdum
                 consectetur libero id. Vitae et leo duis ut diam quam nulla porttitor massa.</p>
         </div>
+
+        <!-- IMAGES  -->
+        <figure>
+            <img src="images/ux/receiptx/prototype-1.JPG" alt="Prototype Google Login" style="width: 100%;">
+            <figcaption>Google Login</figcaption>
+        </figure>
+
+        <figure>
+            <img src="images/ux/receiptx/prototype-2.JPG" alt="Prototype Home Screen" style="width: 100%;">
+            <figcaption>Home Screen</figcaption>
+        </figure>
+
+        <figure>
+            <img src="images/ux/receiptx/prototype-3.JPG" alt="Prototype Receipt Items" style="width: 100%;">
+            <figcaption>Receipt Items</figcaption>
+        </figure>
+
+        <figure>
+            <img src="images/ux/receiptx/prototype-4.JPG" alt="Prototype Item Details" style="width: 100%;">
+            <figcaption>Receipt Item Details</figcaption>
+        </figure>
+
+        <figure>
+            <img src="images/ux/receiptx/prototype-5.JPG" alt="Prototype Entry Options" style="width: 100%;">
+            <figcaption>Entry Options</figcaption>
+        </figure>
+
+        <figure>
+            <img src="images/ux/receiptx/prototype-6.JPG" alt="Prototype Profile" style="width: 100%;">
+            <figcaption>Profile</figcaption>
+        </figure>
     </div>
 
     <!-- IMPLEMENTATION -->
