--- a/receiptx.html
+++ b/receiptx.html
@@ -274,64 +274,112 @@
         </div>
 
         <!-- IMAGES  -->
-        <div class="topic-imgs">
-            <div class="proto-img">
+        <div class="proto-imgs">
+            <div class="proto-desc">
                 <div class="col">
                     <img src="images/ux/receiptx/prototype-1.JPG" alt="Prototype Google Login" style="width: 100%;">
                 </div>
 
                 <div class="col">
-                    <p>Google Login</p>
+                    <div class="proto-para">
+                        <h3>Google Login</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                            Condimentum mattis pellentesque id nibh. Eget est lorem ipsum dolor sit amet. Aliquam id diam maecenas ultricies mi. Felis donec et 
+                            odio pellentesque diam volutpat. Turpis nunc eget lorem dolor sed viverra ipsum nunc. Cursus metus aliquam eleifend mi in nulla posuere.
+                            In metus vulputate eu scelerisque felis imperdiet. Sit amet consectetur adipiscing elit ut aliquam purus sit. Semper quis lectus nulla
+                            at volutpat diam. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Laoreet suspendisse interdum
+                            consectetur libero id. Vitae et leo duis ut diam quam nulla porttitor massa.</p>
+                    </div>
                 </div>
             </div>
 
-            <div class="proto-img">
+            <div class="proto-desc">
                 <div class="col">
                     <img src="images/ux/receiptx/prototype-2.JPG" alt="Prototype Home Screen" style="width: 100%;">
                 </div>
 
                 <div class="col">
-                    <p>Home Screen</p>
+                    <div class="proto-para">
+                        <h3>Home Screen</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                            Condimentum mattis pellentesque id nibh. Eget est lorem ipsum dolor sit amet. Aliquam id diam maecenas ultricies mi. Felis donec et 
+                            odio pellentesque diam volutpat. Turpis nunc eget lorem dolor sed viverra ipsum nunc. Cursus metus aliquam eleifend mi in nulla posuere.
+                            In metus vulputate eu scelerisque felis imperdiet. Sit amet consectetur adipiscing elit ut aliquam purus sit. Semper quis lectus nulla
+                            at volutpat diam. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Laoreet suspendisse interdum
+                            consectetur libero id. Vitae et leo duis ut diam quam nulla porttitor massa.</p>
+                    </div>
                 </div>
             </div>
 
-            <div class="proto-img">
+            <div class="proto-desc">
                 <div class="col">
                     <img src="images/ux/receiptx/prototype-3.JPG" alt="Prototype Receipt Items" style="width: 100%;">
                 </div>
 
                 <div class="col">
-                    <p>Receipt Items</p>
+                    <div class="proto-para">
+                        <h3>Receipt Items</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                            Condimentum mattis pellentesque id nibh. Eget est lorem ipsum dolor sit amet. Aliquam id diam maecenas ultricies mi. Felis donec et 
+                            odio pellentesque diam volutpat. Turpis nunc eget lorem dolor sed viverra ipsum nunc. Cursus metus aliquam eleifend mi in nulla posuere.
+                            In metus vulputate eu scelerisque felis imperdiet. Sit amet consectetur adipiscing elit ut aliquam purus sit. Semper quis lectus nulla
+                            at volutpat diam. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Laoreet suspendisse interdum
+                            consectetur libero id. Vitae et leo duis ut diam quam nulla porttitor massa.</p>
+                    </div>
                 </div>
             </div>
 
-            <div class="proto-img">
+            <div class="proto-desc">
                 <div class="col">
-                    <img src="images/ux/receiptx/prototype-4.JPG" alt="Prototype Item Details" style="width: 100%;">
+                    <img src="images/ux/receiptx/prototype-4.JPG" alt="Prototype Details" style="width: 100%;">
                 </div>
 
                 <div class="col">
-                    <p>Receipt Item Details</p>
-                </div>
-            </div>
-
-            <div class="proto-img">
-                <div class="col">
-                    <img src="images/ux/receiptx/prototype-5.JPG" alt="Prototype Entry Options" style="width: 100%;">
-                </div>
-
-                <div class="col">
-                    <p>Entry Options</p>
+                    <div class="proto-para">
+                        <h3>Receipt Details</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                            Condimentum mattis pellentesque id nibh. Eget est lorem ipsum dolor sit amet. Aliquam id diam maecenas ultricies mi. Felis donec et 
+                            odio pellentesque diam volutpat. Turpis nunc eget lorem dolor sed viverra ipsum nunc. Cursus metus aliquam eleifend mi in nulla posuere.
+                            In metus vulputate eu scelerisque felis imperdiet. Sit amet consectetur adipiscing elit ut aliquam purus sit. Semper quis lectus nulla
+                            at volutpat diam. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Laoreet suspendisse interdum
+                            consectetur libero id. Vitae et leo duis ut diam quam nulla porttitor massa.</p>
+                    </div>
                 </div>
             </div>
 
-            <div class="proto-img">
+            <div class="proto-desc">
                 <div class="col">
-                    <img src="images/ux/receiptx/prototype-6.JPG" alt="Prototype Profile" style="width: 100%;">
+                    <img src="images/ux/receiptx/prototype-5.JPG" alt="Prototype Receipt Entry Options" style="width: 100%;">
                 </div>
 
                 <div class="col">
-                    <p>Profile</p>
+                    <div class="proto-para">
+                        <h3>Receipt Entry Options</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                            Condimentum mattis pellentesque id nibh. Eget est lorem ipsum dolor sit amet. Aliquam id diam maecenas ultricies mi. Felis donec et 
+                            odio pellentesque diam volutpat. Turpis nunc eget lorem dolor sed viverra ipsum nunc. Cursus metus aliquam eleifend mi in nulla posuere.
+                            In metus vulputate eu scelerisque felis imperdiet. Sit amet consectetur adipiscing elit ut aliquam purus sit. Semper quis lectus nulla
+                            at volutpat diam. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Laoreet suspendisse interdum
+                            consectetur libero id. Vitae et leo duis ut diam quam nulla porttitor massa.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="proto-desc">
+                <div class="col">
+                    <img src="images/ux/receiptx/prototype-6.JPG" alt="Prototype User Profile" style="width: 100%;">
+                </div>
+
+                <div class="col">
+                    <div class="proto-para">
+                        <h3>User Profile</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                            Condimentum mattis pellentesque id nibh. Eget est lorem ipsum dolor sit amet. Aliquam id diam maecenas ultricies mi. Felis donec et 
+                            odio pellentesque diam volutpat. Turpis nunc eget lorem dolor sed viverra ipsum nunc. Cursus metus aliquam eleifend mi in nulla posuere.
+                            In metus vulputate eu scelerisque felis imperdiet. Sit amet consectetur adipiscing elit ut aliquam purus sit. Semper quis lectus nulla
+                            at volutpat diam. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Laoreet suspendisse interdum
+                            consectetur libero id. Vitae et leo duis ut diam quam nulla porttitor massa.</p>
+                    </div>
                 </div>
             </div>
 
