--- a/receiptx.html
+++ b/receiptx.html
@@ -151,17 +151,17 @@
         <!-- IMAGES  -->
         <div class="topic-imgs">
             <figure id="research-fig">
-                <img src="images/ux/receiptx/survery-q1.PNG" alt="Survey Question 1" style="width: 100%;">
+                <img src="images/ux/receiptx/survery-q1.JPG" alt="Survey Question 1" style="width: 100%;">
                 <figcaption>Survey Question 1</figcaption>
             </figure>
 
             <figure id="research-fig">
-                <img src="images/ux/receiptx/survery-q2.PNG" alt="Survey Question 2" style="width: 100%;">
+                <img src="images/ux/receiptx/survery-q2.JPG" alt="Survey Question 2" style="width: 100%;">
                 <figcaption>Survey Question 2</figcaption>
             </figure>
 
             <figure id="research-fig">
-                <img src="images/ux/receiptx/survery-q3.PNG" alt="Survey Question 3" style="width: 100%;">
+                <img src="images/ux/receiptx/survery-q3.JPG" alt="Survey Question 3" style="width: 100%;">
                 <figcaption>Survey Question 3</figcaption>
             </figure>
         </div>
@@ -197,7 +197,7 @@
     <!-- PRODUCT VISION -->
     <div class="container">
         <div class="vision">
-            <h1>The product vision - SHOW VIDEO DEMO</h1>
+            <h1>The product vision</h1>
             <p>what does our project highlight?, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                 Condimentum mattis pellentesque id nibh. Eget est lorem ipsum dolor sit amet. Aliquam id diam maecenas ultricies mi. Felis donec et 
                 odio pellentesque diam volutpat. Turpis nunc eget lorem dolor sed viverra ipsum nunc. Cursus metus aliquam eleifend mi in nulla posuere.
@@ -208,6 +208,102 @@
 
         <iframe src="https://www.youtube.com/embed/oj-bELa4va4" frameborder="0" allow="accelerometer; 
             autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
+    <!-- THE MARKET -->
+    <div class="container">
+        <div class="market">
+            <h1>What's on the market</h1>
+            <p>how did we come up with how project should look like, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                Condimentum mattis pellentesque id nibh. Eget est lorem ipsum dolor sit amet. Aliquam id diam maecenas ultricies mi. Felis donec et 
+                odio pellentesque diam volutpat. Turpis nunc eget lorem dolor sed viverra ipsum nunc. Cursus metus aliquam eleifend mi in nulla posuere.
+                In metus vulputate eu scelerisque felis imperdiet. Sit amet consectetur adipiscing elit ut aliquam purus sit. Semper quis lectus nulla
+                at volutpat diam. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Laoreet suspendisse interdum
+                consectetur libero id. Vitae et leo duis ut diam quam nulla porttitor massa.</p>
+
+            <!-- COMPETITION -->
+            <div class="competitor">
+                <h2>Expensify</h2>
+                <div class="pro-con">
+                    <!-- PROS  -->
+                    <div class="col">
+                        <h3>Pros</h3>
+                        <ul>
+                            <li>Submit receipts to manager</li>
+                            <li>Collect receipts from clients</li>
+                            <li>Track personal expenses</li>
+                            <li>Categorization</li>
+                            <li>Mileage and time tracking</li>
+                            <li>Direct deposit and reimbursement</li>
+                        </ul>
+                    </div>
+
+                    <!-- CONS  -->
+                    <div class="col">
+                        <h3>Cons</h3>
+                        <ul>
+                            <li>Scanning receipts not always accurate</li>
+                            <li>Functionality is not always clear</li>
+                            <li>Sometimes loses receipts</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="competitor">
+                <h2>Shoeboxed</h2>
+                <div class="pro-con">
+                    <!-- PROS  -->
+                    <div class="col">
+                        <h3>Pros</h3>
+                        <ul>
+                            <li>Check for deductible taxes</li>
+                            <li>Mark expenses as reimbursable</li>
+                            <li>Imports receipts from Gmail</li>
+                            <li>Creates reports</li>
+                            <li>Mileage tracking</li>
+                        </ul>
+                    </div>
+
+                    <!-- CONS  -->
+                    <div class="col">
+                        <h3>Cons</h3>
+                        <ul>
+                            <li>Only PDF version when exporting data</li>
+                            <li>Receipts are sometimes mislabeled</li>
+                            <li>Pricey for those who do not use app often</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="competitor">
+                <h2>Neat</h2>
+                <div class="pro-con">
+                    <!-- PROS  -->
+                    <div class="col">
+                        <h3>Pros</h3>
+                        <ul>
+                            <li>Share data between people</li>
+                            <li>Folders</li>
+                            <li>Comments on receipts</li>
+                            <li>Imports data from PDF files, images, and electionic receipts</li>
+                            <li>Expense reports</li>
+                        </ul>
+                    </div>
+
+                    <!-- CONS  -->
+                    <div class="col">
+                        <h3>Cons</h3>
+                        <ul>
+                            <li>Prices may vary</li>
+                            <li>Must log in after 5 minute timeout</li>
+                            <li>Quality of image determines how app functions</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- PRODUCT MVP -->
@@ -397,6 +493,24 @@
                 In metus vulputate eu scelerisque felis imperdiet. Sit amet consectetur adipiscing elit ut aliquam purus sit. Semper quis lectus nulla
                 at volutpat diam. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Laoreet suspendisse interdum
                 consectetur libero id. Vitae et leo duis ut diam quam nulla porttitor massa.</p>
+
+            <!-- IMAGES  -->
+            <div class="topic-imgs">
+                <figure id="imp-fig">
+                    <img src="images/ux/receiptx/manage-1.JPG" alt="List of tasks" style="width: 100%;">
+                    <figcaption>List of tasks</figcaption>
+                </figure>
+
+                <figure id="imp-fig">
+                    <img src="images/ux/receiptx/manage-2.JPG" alt="Task management" style="width: 100%;">
+                    <figcaption>Task management</figcaption>
+                </figure>
+
+                <figure id="imp-fig">
+                    <img src="images/ux/receiptx/manage-3.JPG" alt="Burndown chart" style="width: 100%;">
+                    <figcaption>Burndown Chart</figcaption>
+                </figure>
+            </div>
         </div>
     </div>
 
