--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <a href="#process">Process</a>
             <a href="#resume">Resume</a>
             <a href="#about">About</a>
-            <a href="#skills">Skills</a>
+            <!-- <a href="#skills">Skills</a> -->
             <a href="#contact">Contact</a>
         </div>
     </div>
@@ -59,7 +59,7 @@
             <a href="#process">Process</a>
             <a href="#resume">Resume</a>
             <a href="#about">About</a>
-            <a href="#skills">Skills</a>
+            <!-- <a href="#skills">Skills</a> -->
             <a href="#contact">Contact</a>
             <a class="icon"><i class="fa fa-bars menu-icon fa-2x"></i></a>
         </div>
@@ -274,7 +274,7 @@
                     <div class="content-tl">
                         <h3>Master of Science in Human Computer Interaction/design</h3>
                         <p>Indiana University&#44; Bloomington&#44; IN</p>
-                        <p>Cumulative GPA: TBD / 4.0</p>
+                        <p>Cumulative GPA: 4.0 / 4.0</p>
                     
                         <div class="time-tl">
                             <h4>May 2022</h4>
@@ -373,10 +373,10 @@
     </div>
 
     <!-- SKILLS  -->
-    <div class="container">
-        <div id="skills">
+    <!-- <div class="container">
+        <div id="skills"> -->
             <!-- skills  -->
-            <div class="skillsBox">
+            <!-- <div class="skillsBox">
                 <h1>Skills</h1>
 
                 <div class="skills">
@@ -436,7 +436,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- stock image here about contact -->
     <div class="stock-img">
