--- a/receiptx.html
+++ b/receiptx.html
@@ -527,6 +527,12 @@
         </div>
     </div>
 
+    <!-- MORE PROJECTS  -->
+    <div class="container">
+        <p>More Projects</p>
+        <a href="hammer.html"><img id="hammer" src="images/ux/hammer/hammer.png" alt="Rhino Hammer"></a>
+    </div>
+
     <!-- FOOTER  -->
     <footer>
         <div class="footer-container">
