--- a/receiptx.html
+++ b/receiptx.html
@@ -178,6 +178,17 @@
                 In metus vulputate eu scelerisque felis imperdiet. Sit amet consectetur adipiscing elit ut aliquam purus sit. Semper quis lectus nulla
                 at volutpat diam. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum. Laoreet suspendisse interdum
                 consectetur libero id. Vitae et leo duis ut diam quam nulla porttitor massa.</p>
+
+            <!-- IMAGES  -->
+            <div class="topic-imgs">
+                <figure id="persona-fig">
+                    <img src="images/ux/receiptx/persona-1.png" alt="Persona: Robert Smith" style="width: 100%;">
+                </figure>
+
+                <figure id="persona-fig">
+                    <img src="images/ux/receiptx/persona-2.png" alt="Persona: Elena Morris" style="width: 100%;">
+                </figure>
+            </div>
         </div>
     </div>
 
